# robots_api

hcr/: hcr_api.py
ros/hcr_robot/: README.md
ros/hcr_robot/hcr_2dnav/: CMakeLists.txt  package.xml
ros/hcr_robot/hcr_2dnav/launch/: .move_base.launch.swp  gmapping.launch  move_base.launch
ros/hcr_robot/hcr_2dnav/params/: base_local_planner_params.yaml  costmap_common_params.yaml  local_costmap_params.yaml
ros/hcr_robot/hcr_driver/: .CMakeLists.txt.swp  .rosdoc.yaml.swp  CMakeLists.txt  package.xml  setup.py
ros/hcr_robot/hcr_driver/src/hcr_driver/: .hcr_driver.py.swp  hcr_driver.py
ros/hcr_robot/hcr_node/: .package.xml.swp  CMakeLists.txt  package.xml
ros/hcr_robot/hcr_node/launch/: .bringup.launch.swp  bringup.launch  bringup.launch.save
ros/hcr_robot/hcr_node/nodes/: hcr.py
ros/hcr_robot/hcr_robot/: CMakeLists.txt  package.xml
ros/hcr_robot/online_slam/: CMakeLists.txt  package.xml
ros/hcr_robot/online_slam/launch/: exploration.launch  slam.launch
ros/hcr_robot/online_slam/params/: costmap_common_params.yaml  trajectory_planner.yaml
xv21/: neato_api.py  neato_driver.py
