<package>
  <name>hcr_driver</name>
  <version>0.2.0</version>
  <description>
    This is a generic drivers for the HCR Robot.
  </description>
  <author>Michael Ferguson</author>
  <maintainer email="ferguson@cs.albany.edu">Michael Ferguson</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/hcr_driver</url>
  
  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>python-serial</run_depend>

  <export>
    <rosdoc config="rosdoc.yaml" />
  </export> 
</package>
