<package>
  <name>hcr_node</name>
  <version>0.2.0</version>
  <description>
    A node wrapper for the hcr_driver package
  </description>
  <author>Michael Ferguson</author>
  <maintainer email="ferguson@cs.albany.edu">Michael Ferguson</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/hcr_node</url>
  
  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>hcr_driver</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>tf</run_depend>
</package>
