<package>
  <name>hcr_robot</name>
  <version>0.2.0</version>
  <description>
    Metapackage for drivers for the Neato XV-11 robot. 
  </description>
  <author>Michael Ferguson</author>
  <maintainer email="ferguson@cs.albany.edu">Michael Ferguson</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/neato_robot</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>hcr_driver</run_depend>
  <run_depend>hcr_node</run_depend>
  <run_depend>hcr_2dnav</run_depend>
  <run_depend>online_slam</run_depend>
  <export>
   <metapackage/>
  </export>
</package>
